feat: add basic custom text unmarshaling

--- a/bamboo.toml
+++ b/bamboo.toml
@@ -25,7 +25,7 @@ WidgetSpacing = "around"
 Name = "Clock"
 
 # built-in module
-Type = "time"
+Type = "Time"
 # strftime-style format
 Format = "%H:%M"
 
