feat: tweak configuration parsing (#1)
* feat: add basic custom text unmarshaling

* feat: justfile improvements

* feat: new config schema

--- a/bamboo.toml
+++ b/bamboo.toml
@@ -21,11 +21,9 @@ Widgets = [
 # can be around, between, none
 WidgetSpacing = "around"
 
-[[Widgets]]
-Name = "Clock"
-
+[Widgets.Clock]
 # built-in module
-Type = "time"
+Type = "Time"
 # strftime-style format
 Format = "%H:%M"
 
